--- a/notebooks/day-2.ipynb
+++ b/notebooks/day-2.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ca6f6ed6-79e9-4efc-836a-040000ce8c89",
    "metadata": {
@@ -14,7 +13,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f7a6b606-a68d-43e6-bc43-598ce32032cc",
    "metadata": {},
@@ -25,7 +23,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f5315532",
    "metadata": {},
@@ -34,7 +31,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "fd6ea658-93e2-4901-9ce5-7db00e7f9f44",
    "metadata": {},
@@ -43,7 +39,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "64b5e9bd-abca-4f7f-9a92-889edf4a218d",
    "metadata": {},
@@ -52,7 +47,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d24aa6e0-8b62-412a-a318-f89d71a51bbd",
    "metadata": {},
@@ -86,7 +80,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "92896163-cda2-4935-a1ea-14e2892734aa",
    "metadata": {},
@@ -95,7 +88,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "65a34fd6-c902-442a-982f-9721f3855d36",
    "metadata": {
@@ -108,7 +100,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "45bfc279-5fbf-4337-ae47-27ba8800ace8",
    "metadata": {},
@@ -119,7 +110,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8940e135-cebe-406f-8a06-5e4e80b1f29d",
    "metadata": {},
@@ -128,7 +118,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3c9dc584-12c6-488f-9bcc-d67b4c61931f",
    "metadata": {},
@@ -139,7 +128,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5c4f2ca5-7239-4ea6-822a-896896082d3f",
    "metadata": {},
@@ -148,7 +136,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a7bd626a-45dd-4778-87e3-729c3b5d9953",
    "metadata": {},
@@ -216,8 +203,8 @@
       "\n",
       "\n",
       "Downloading and Extracting Packages\n",
-      "certifi-2023.5.7     | 149 KB    | ##################################### | 100% \n",
       "ca-certificates-2023 | 145 KB    | ##################################### | 100% \n",
+      "certifi-2023.5.7     | 149 KB    | ##################################### | 100% \n",
       "Preparing transaction: done\n",
       "Verifying transaction: done\n",
       "Executing transaction: done\n",
@@ -231,7 +218,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "68523e64-73a1-4193-8b52-259921400437",
    "metadata": {},
@@ -250,8 +236,8 @@
     {
      "data": {
       "text/plain": [
-       "array([0.09066246, 0.54063123, 0.2939137 , 0.2408396 , 0.0201064 ,\n",
-       "       0.81421005, 0.65803013, 0.24392301, 0.41667122, 0.15745529])"
+       "array([0.73304246, 0.13428528, 0.30448166, 0.77134723, 0.76716661,\n",
+       "       0.60429174, 0.16385294, 0.07777589, 0.86981945, 0.19241856])"
       ]
      },
      "execution_count": 3,
@@ -265,7 +251,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a1172abf-4034-4b49-a907-58096e29489c",
    "metadata": {},
@@ -274,7 +259,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2f518443",
    "metadata": {},
@@ -287,7 +271,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a3cf2268",
    "metadata": {},
@@ -296,7 +279,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b6c23f64",
    "metadata": {},
@@ -305,69 +287,82 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f7e6cb6f",
    "metadata": {},
    "source": [
-    "### 2.1 MeCab のインストール"
+    "### 2.1 MeCab のインストール (約3分)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "30202422-8b99-4dc3-81cc-9381622fde42",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully installed mecab-python-0.996"
+     ]
+    }
+   ],
    "source": [
     "!bash ../scripts/install_mecab.sh > install_mecab.log 2>&1\n",
-    "!head -n 1 install_mecab.log"
+    "!tail -n 1 install_mecab.log"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b323962b",
    "metadata": {},
    "source": [
-    "「SUCCESS !!」 と表示されれば、インストール成功です。"
+    "`Successfully installed mecab-python-0.996` と表示されれば、インストール成功です。"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a9db654b-9e28-4627-93ed-7b5c52365333",
    "metadata": {
     "tags": []
    },
    "source": [
-    "### 2.2 CaboCha のインストール"
+    "### 2.2 CaboCha のインストール (約5分)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4e308382-8003-4dbb-bfd1-0961b857f65d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully installed cabocha-python-0.69\n"
+     ]
+    }
+   ],
    "source": [
     "!bash ../scripts/install_cabocha.sh > install_cabocha.log 2>&1\n",
-    "!head -n 1 install_cabocha.log"
+    "!tail -n 1 install_cabocha.log"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e55ba650",
    "metadata": {},
    "source": [
-    "「SUCCESS !!」 と表示されれば、インストール成功です。"
+    "`Successfully installed cabocha-python-0.69` と表示されれば、インストール成功です。"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cc7ee22b-7645-4303-93aa-1e823525e832",
    "metadata": {},
@@ -376,29 +371,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "42ee393e",
    "metadata": {},
    "source": [
-    "ページ上部のメニューバーにある **Kernel** メニューをクリックし、プルダウンメニューから [**Restart Kernel ...**] を選択してください。"
+    "ページ上部のメニューバーにある **Kernel** メニューをクリックし、プルダウンメニューから [**Restart Kernel ...**] を選択してください。\n",
+    "\n",
+    "<img src=\"images/restart_kernel.png\" width=\"60%\">"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ec44924-8b85-4e62-9c60-428a298367d0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# import os\n",
-    "# os._exit(0)"
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6aa19ed6-f659-48c3-95e7-88e890a7dd2f",
    "metadata": {},
@@ -407,7 +389,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d62a17a1-dada-42e1-b478-6c94e7aaeb3d",
    "metadata": {},
@@ -416,7 +397,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2a7fe581-4fbd-4f7c-9706-a3d089c45145",
    "metadata": {},
@@ -425,7 +405,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "001a05cc-ca14-405c-a158-4352ef8f47ae",
    "metadata": {},
@@ -463,7 +442,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "213babc9-e16b-4ac2-b542-5405927c6f82",
    "metadata": {},
@@ -640,7 +618,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "88291f69-eded-4096-93d7-857597ece10e",
    "metadata": {},
@@ -649,7 +626,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6be24edf-99ca-49a0-995e-e314753c4ce0",
    "metadata": {},
@@ -658,7 +634,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "472d4965-1c37-4c7f-b751-a175aeffb4aa",
    "metadata": {},
@@ -667,7 +642,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "36875d67-5c83-4843-863e-efbb7193ecc7",
    "metadata": {},
@@ -709,7 +683,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "03228d63-c3cc-4e1a-9560-f5af908194d9",
    "metadata": {},
@@ -721,7 +694,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "30366faa-2c0a-40d8-a1d6-ad277e2cdc3c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -740,7 +715,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "952debf3-60eb-417f-bdf4-0c30a64a6f7e",
    "metadata": {},
