--- a/notebooks/day-2.ipynb
+++ b/notebooks/day-2.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ca6f6ed6-79e9-4efc-836a-040000ce8c89",
    "metadata": {
@@ -13,6 +14,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f7a6b606-a68d-43e6-bc43-598ce32032cc",
    "metadata": {},
@@ -23,6 +25,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f5315532",
    "metadata": {},
@@ -31,6 +34,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fd6ea658-93e2-4901-9ce5-7db00e7f9f44",
    "metadata": {},
@@ -39,6 +43,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "64b5e9bd-abca-4f7f-9a92-889edf4a218d",
    "metadata": {},
@@ -47,6 +52,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d24aa6e0-8b62-412a-a318-f89d71a51bbd",
    "metadata": {},
@@ -80,6 +86,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "92896163-cda2-4935-a1ea-14e2892734aa",
    "metadata": {},
@@ -88,6 +95,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "65a34fd6-c902-442a-982f-9721f3855d36",
    "metadata": {
@@ -100,6 +108,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "45bfc279-5fbf-4337-ae47-27ba8800ace8",
    "metadata": {},
@@ -110,6 +119,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8940e135-cebe-406f-8a06-5e4e80b1f29d",
    "metadata": {},
@@ -118,6 +128,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3c9dc584-12c6-488f-9bcc-d67b4c61931f",
    "metadata": {},
@@ -128,6 +139,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5c4f2ca5-7239-4ea6-822a-896896082d3f",
    "metadata": {},
@@ -136,6 +148,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a7bd626a-45dd-4778-87e3-729c3b5d9953",
    "metadata": {},
@@ -218,6 +231,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "68523e64-73a1-4193-8b52-259921400437",
    "metadata": {},
@@ -251,6 +265,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a1172abf-4034-4b49-a907-58096e29489c",
    "metadata": {},
@@ -259,6 +274,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2f518443",
    "metadata": {},
@@ -271,6 +287,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a3cf2268",
    "metadata": {},
@@ -279,6 +296,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b6c23f64",
    "metadata": {},
@@ -287,6 +305,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f7e6cb6f",
    "metadata": {},
@@ -311,11 +330,12 @@
     }
    ],
    "source": [
-    "!bash ../scripts/install_mecab.sh > install_mecab.log 2>&1\n",
+    "%time ../scripts/install_mecab.sh > install_mecab.log 2>&1\n",
     "!tail -n 1 install_mecab.log"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b323962b",
    "metadata": {},
@@ -324,6 +344,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a9db654b-9e28-4627-93ed-7b5c52365333",
    "metadata": {
@@ -350,11 +371,12 @@
     }
    ],
    "source": [
-    "!bash ../scripts/install_cabocha.sh > install_cabocha.log 2>&1\n",
+    "%time ../scripts/install_cabocha.sh > install_cabocha.log 2>&1\n",
     "!tail -n 1 install_cabocha.log"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e55ba650",
    "metadata": {},
@@ -363,6 +385,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cc7ee22b-7645-4303-93aa-1e823525e832",
    "metadata": {},
@@ -371,6 +394,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "42ee393e",
    "metadata": {},
@@ -381,6 +405,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6aa19ed6-f659-48c3-95e7-88e890a7dd2f",
    "metadata": {},
@@ -389,6 +414,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d62a17a1-dada-42e1-b478-6c94e7aaeb3d",
    "metadata": {},
@@ -397,6 +423,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2a7fe581-4fbd-4f7c-9706-a3d089c45145",
    "metadata": {},
@@ -405,6 +432,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "001a05cc-ca14-405c-a158-4352ef8f47ae",
    "metadata": {},
@@ -442,6 +470,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "213babc9-e16b-4ac2-b542-5405927c6f82",
    "metadata": {},
@@ -618,6 +647,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "88291f69-eded-4096-93d7-857597ece10e",
    "metadata": {},
@@ -626,6 +656,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6be24edf-99ca-49a0-995e-e314753c4ce0",
    "metadata": {},
@@ -634,6 +665,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "472d4965-1c37-4c7f-b751-a175aeffb4aa",
    "metadata": {},
@@ -642,6 +674,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "36875d67-5c83-4843-863e-efbb7193ecc7",
    "metadata": {},
@@ -683,6 +716,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03228d63-c3cc-4e1a-9560-f5af908194d9",
    "metadata": {},
@@ -715,6 +749,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "952debf3-60eb-417f-bdf4-0c30a64a6f7e",
    "metadata": {},
