--- a/notebooks/day-2.ipynb
+++ b/notebooks/day-2.ipynb
@@ -216,8 +216,8 @@
       "\n",
       "\n",
       "Downloading and Extracting Packages\n",
-      "ca-certificates-2023 | 145 KB    | ##################################### | 100% \n",
       "certifi-2023.5.7     | 149 KB    | ##################################### | 100% \n",
+      "ca-certificates-2023 | 145 KB    | ##################################### | 100% \n",
       "Preparing transaction: done\n",
       "Verifying transaction: done\n",
       "Executing transaction: done\n",
@@ -250,8 +250,8 @@
     {
      "data": {
       "text/plain": [
-       "array([0.73304246, 0.13428528, 0.30448166, 0.77134723, 0.76716661,\n",
-       "       0.60429174, 0.16385294, 0.07777589, 0.86981945, 0.19241856])"
+       "array([0.83870571, 0.35177248, 0.32760409, 0.80470298, 0.31102567,\n",
+       "       0.91204229, 0.75892251, 0.75008716, 0.56089786, 0.86074976])"
       ]
      },
      "execution_count": 3,
@@ -310,12 +310,12 @@
    "id": "f7e6cb6f",
    "metadata": {},
    "source": [
-    "### 2.1 MeCab のインストール (約3分)"
+    "### 2.1 MeCab のインストール (目安:約3分)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "30202422-8b99-4dc3-81cc-9381622fde42",
    "metadata": {
     "tags": []
@@ -325,12 +325,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully installed mecab-python-0.996"
+      "Successfully installed mecab-python-0.996\n"
      ]
     }
    ],
    "source": [
-    "%time ../scripts/install_mecab.sh > install_mecab.log 2>&1\n",
+    "!bash ../scripts/install_mecab.sh > install_mecab.log 2>&1\n",
     "!tail -n 1 install_mecab.log"
    ]
   },
@@ -351,12 +351,12 @@
     "tags": []
    },
    "source": [
-    "### 2.2 CaboCha のインストール (約5分)"
+    "### 2.2 CaboCha のインストール (目安:約5分)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "4e308382-8003-4dbb-bfd1-0961b857f65d",
    "metadata": {
     "tags": []
@@ -371,7 +371,7 @@
     }
    ],
    "source": [
-    "%time ../scripts/install_cabocha.sh > install_cabocha.log 2>&1\n",
+    "!bash ../scripts/install_cabocha.sh > install_cabocha.log 2>&1\n",
     "!tail -n 1 install_cabocha.log"
    ]
   },
