--- a/notebooks/day-2-1.ipynb
+++ b/notebooks/day-2-1.ipynb
@@ -88,20 +88,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "87a80480-cf35-4fc1-a403-25a83fe17f44",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 20 30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 10\n",
     "b = 20\n",
@@ -183,63 +175,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "deef862e-c4d4-494a-9736-494aaaafb981",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting package metadata (current_repodata.json): done\n",
-      "Solving environment: done\n",
-      "\n",
-      "\n",
-      "==> WARNING: A newer version of conda exists. <==\n",
-      "  current version: 4.10.3\n",
-      "  latest version: 23.5.0\n",
-      "\n",
-      "Please update conda by running\n",
-      "\n",
-      "    $ conda update -n base conda\n",
-      "\n",
-      "\n",
-      "\n",
-      "## Package Plan ##\n",
-      "\n",
-      "  environment location: /home/studio-lab-user/.conda/envs/gssm2023\n",
-      "\n",
-      "  added / updated specs:\n",
-      "    - numpy\n",
-      "\n",
-      "\n",
-      "The following packages will be downloaded:\n",
-      "\n",
-      "    package                    |            build\n",
-      "    ---------------------------|-----------------\n",
-      "    ca-certificates-2023.5.7   |       hbcca054_0         145 KB  conda-forge\n",
-      "    certifi-2023.5.7           |     pyhd8ed1ab_0         149 KB  conda-forge\n",
-      "    ------------------------------------------------------------\n",
-      "                                           Total:         294 KB\n",
-      "\n",
-      "The following packages will be SUPERSEDED by a higher-priority channel:\n",
-      "\n",
-      "  ca-certificates    pkgs/main::ca-certificates-2023.05.30~ --> conda-forge::ca-certificates-2023.5.7-hbcca054_0\n",
-      "  certifi            pkgs/main/linux-64::certifi-2023.5.7-~ --> conda-forge/noarch::certifi-2023.5.7-pyhd8ed1ab_0\n",
-      "\n",
-      "\n",
-      "\n",
-      "Downloading and Extracting Packages\n",
-      "ca-certificates-2023 | 145 KB    | ##################################### | 100% \n",
-      "certifi-2023.5.7     | 149 KB    | ##################################### | 100% \n",
-      "Preparing transaction: done\n",
-      "Verifying transaction: done\n",
-      "Executing transaction: done\n",
-      "\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%conda install numpy"
    ]
@@ -249,29 +188,17 @@
    "id": "68523e64-73a1-4193-8b52-259921400437",
    "metadata": {},
    "source": [
-    "これで **NumPy** が使えるようになりました:"
+    "これで **NumPy** が使えるようになりました (実際には NumPy はすでにインストールされているためアップデートされています)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d4086851-d2ed-4def-99a3-31f1ceee71df",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.41472727, 0.88089484, 0.46721544, 0.70799137, 0.09224771,\n",
-       "       0.73915907, 0.30014205, 0.37035059, 0.07321687, 0.63692513])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "np.random.rand(10)"
@@ -323,20 +250,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "30202422-8b99-4dc3-81cc-9381622fde42",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully installed mecab-python-0.996\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!bash ../scripts/install_mecab.sh > install_mecab.log 2>&1\n",
     "!tail -n 1 install_mecab.log"
@@ -362,20 +281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4e308382-8003-4dbb-bfd1-0961b857f65d",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully installed cabocha-python-0.69\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!bash ../scripts/install_cabocha.sh > install_cabocha.log 2>&1\n",
     "!tail -n 1 install_cabocha.log"
@@ -420,13 +331,13 @@
    "id": "4ca0cc73-e065-4cc1-aebe-7916879e1540",
    "metadata": {},
    "source": [
-    "## 次ノートブック [day-2-2](./day-2-2.ipynb) を開いてください"
+    "## 次のノートブック [day-2-2](./day-2-2.ipynb) を開いてください"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4a82aec-b09f-447a-92fe-e6f296467a9d",
+   "id": "8a9543cf-558b-4225-b1f1-cfa4fbc09ba4",
    "metadata": {},
    "outputs": [],
    "source": []
