--- a/notebooks/day-2-2.ipynb
+++ b/notebooks/day-2-2.ipynb
@@ -7,8 +7,22 @@
     "tags": []
    },
    "source": [
-    "# day 2-2\n",
-    "\n",
+    "# day 2-2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60dcf289-0b12-4095-ad06-ab4b467cf089",
+   "metadata": {},
+   "source": [
+    "このノートブックの実行例は[こちら(HTML版)](../notebooks-sample/day-2-2.html)で確認できます"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d45355cf-4a36-4d51-80b7-3766e514b96b",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
@@ -119,7 +133,7 @@
     "    node = node.next\n",
     "\n",
     "columns = [\n",
-    "    \"品詞\",\n",
+    "    \"品詞\", \n",
     "    \"品詞細分類1\",\n",
     "    \"品詞細分類2\",\n",
     "    \"品詞細分類3\",\n",
@@ -243,6 +257,7 @@
    },
    "outputs": [],
    "source": [
+    "tree = cp.parse(\"今日はいい天気です\")\n",
     "chunks = get_chunks(tree)\n",
     "\n",
     "for from_chunk in chunks.values():\n",
@@ -311,9 +326,23 @@
    },
    "outputs": [],
    "source": [
-    "# FILE_ID = \"1n-uvGoH7XQhxexN57hYXuFrkGeHKp-HV\"\n",
+    "# rakuten-1000-2022-2023.xlsx.zip をダウンロードする\n",
+    "FILE_ID = \"1n-uvGoH7XQhxexN57hYXuFrkGeHKp-HV\"\n",
+    "!gdown --id {FILE_ID}\n",
+    "!unzip rakuten-1000-2022-2023.xlsx.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2db7b12-1374-4f51-9fed-615e42febb6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # rakuten-1000-2020-2021.xlsx.zip をダウンロードする\n",
+    "# FILE_ID = \"1o-9WVPhr0PmSjQE6OCtJbWEVTp5k5Gr4\"\n",
     "# !gdown --id {FILE_ID}\n",
-    "# !unzip rakuten-1000-2022-2023.xlsx.zip"
+    "# !unzip rakuten-1000-2020-2021.xlsx.zip"
    ]
   },
   {
@@ -802,14 +831,6 @@
     "pivot_df = df[df['年代'].isin(['60代','70代','80代'])].pivot_table(index=['カテゴリー','性別'], values=['サービス','立地','部屋','設備・アメニティ','風呂','食事','総合'], margins=False, aggfunc='mean', dropna=True)\n",
     "display(pivot_df.loc[(['A_レジャー','B_ビジネス'],['男性','女性']),['サービス','立地','部屋','設備・アメニティ','風呂','食事','総合']].style.format('{:.2f}').background_gradient(axis=None))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "872f2efe-8b02-409e-bd44-01546fee7552",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
