--- a/notebooks/day-2-1.ipynb
+++ b/notebooks/day-2-1.ipynb
@@ -7,15 +7,33 @@
     "tags": []
    },
    "source": [
-    "# day 2-1\n",
-    "\n",
+    "# day 2-1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c810781-f73f-4499-b4e2-1fad96108158",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "このノートブックの実行例は[こちら(HTML版)](../notebooks-sample/day-2-1.html)で確認できます"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59a14093-5615-40dd-b7d5-5666dab2b67a",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "09ca0bb6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## 0. はじめに"
    ]
