--- a/notebooks/day-3.ipynb
+++ b/notebooks/day-3.ipynb
@@ -7,8 +7,22 @@
     "tags": []
    },
    "source": [
-    "# day 3\n",
-    "\n",
+    "# day 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "121ad82b-56cd-469e-9d1a-1c3f76c25385",
+   "metadata": {},
+   "source": [
+    "このノートブックの実行例は[こちら(HTML版)](../notebooks-sample/day-3.html)で確認できます"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02b026be-871b-4e1b-b6f2-86af31885045",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
@@ -977,6 +991,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb028d1e-756d-4cff-bd8a-6a87ce6e2214",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "40790a01-51e1-48df-8ecb-a9ed4c89d070",
    "metadata": {},
    "source": [
@@ -1054,6 +1076,86 @@
   },
   {
    "cell_type": "markdown",
+   "id": "43c0d907-2581-42dc-80ef-1b4fe5c0cac7",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### 2.1.3 文書-単語表の作成 (演習)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70132394-ac62-4c7f-80e3-6cb07f661bc2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# ToDo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c34fd654-3815-463d-ac24-3dba9d23bbf6",
+   "metadata": {},
+   "source": [
+    "####  2.1.4 共起ネットワーク図 (演習)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b999309b-160a-4c3d-a1ba-1ae961beef58",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# ToDo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59772ed7-11e9-4697-8f19-2759b98ebb9b",
+   "metadata": {},
+   "source": [
+    "####  2.1.5 対応分析プロット (演習)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76c03964-5180-4def-9749-dc88311d0a7c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# ToDo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d3aac4a-659d-418c-9909-bce19cd804f0",
+   "metadata": {},
+   "source": [
+    "####  2.1.6 トピックモデル (演習)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee1d08a0-e57b-4c6f-9e94-fd819e464863",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ToDo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3802bef0-2817-4806-a000-d53098f78495",
    "metadata": {},
    "source": [
@@ -1106,7 +1208,7 @@
    "id": "629918d4-9279-4180-b64e-12e4eb37d72b",
    "metadata": {},
    "source": [
-    "#### 2.1.2 ワードクラウド"
+    "#### 2.2.2 ワードクラウド"
    ]
   },
   {
@@ -1119,6 +1221,88 @@
    "outputs": [],
    "source": [
     "draw_wordcloud(word_counts_B_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f75facd1-6dd6-48e4-bbd8-bd0744a1c3f9",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### 2.2.3 文書-単語表の作成 (演習)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e1fc882-eb69-4a46-a676-53c94b5d0c1b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# ToDo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c32e1287-8b91-41e8-83f2-654d6ad468a5",
+   "metadata": {},
+   "source": [
+    "####  2.2.4 共起ネットワーク図 (演習)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc8de5d0-de55-47a3-a9fa-6a7a96c8ed0d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# ToDo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fa9a154-a4bc-44dc-9d6b-00a433cc3711",
+   "metadata": {},
+   "source": [
+    "####  2.2.5 対応分析プロット (演習)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e204814-0bbb-47c1-8c42-751ae341492c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# ToDo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf8f3e36-d64e-44d2-ab1d-35966c848e70",
+   "metadata": {},
+   "source": [
+    "####  2.2.6 トピックモデル (演習)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eedc8b96-857a-4a4b-9a66-8a6568a65b5a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# ToDo"
    ]
   }
  ],
