--- a/notebooks/day-2-1.ipynb
+++ b/notebooks/day-2-1.ipynb
@@ -349,7 +349,7 @@
    "id": "4ca0cc73-e065-4cc1-aebe-7916879e1540",
    "metadata": {},
    "source": [
-    "## 次のノートブック [day-2-2](./day-2-2.ipynb) を開いてください"
+    "## 続いてノートブック [day-2-2](./day-2-2.ipynb) を開いてください"
    ]
   },
   {
