--- a/notebooks/day-3.ipynb
+++ b/notebooks/day-3.ipynb
@@ -77,7 +77,7 @@
    "id": "cdce76ea-4a7a-44a6-a6a9-7556f9c1dc7c",
    "metadata": {},
    "source": [
-    "以下のセルを実行してください"
+    "以下のセルを**修正せず**に実行してください"
    ]
   },
   {
@@ -240,69 +240,41 @@
     "\n",
     "\n",
     "# 対応分析の結果をプロットする\n",
-    "def plot_coresp(df):\n",
+    "def plot_mca(df):\n",
     "\n",
+    "    import mca\n",
     "    import numpy as np\n",
     "\n",
-    "    table_N = df.values\n",
-    "    row_sum = table_N.sum(axis=1)\n",
-    "    col_sum = table_N.sum(axis=0)\n",
-    "    n = df.values.sum()\n",
+    "    ncols = df.shape[1]\n",
+    "    mca_ben = mca.MCA(df, ncols=ncols, benzecri=False)\n",
+    "    row_coord = mca_ben.fs_r(N=2)\n",
+    "    col_coord = mca_ben.fs_c(N=2)\n",
     "\n",
-    "    expected = np.outer(row_sum, col_sum) / n\n",
-    "    chisq = np.square(table_N - expected) / expected\n",
-    "    residuals = (table_N - expected) / np.sqrt(expected)\n",
-    "\n",
-    "    # Standardized residuals\n",
-    "    residuals = residuals / np.sqrt(n)\n",
-    "\n",
-    "    # Number of dimensions\n",
-    "    nb_axes = min(residuals.shape[0]-1, residuals.shape[1]-1)\n",
-    "\n",
-    "    # Singular value decomposition\n",
-    "    U, s, V = np.linalg.svd(residuals, full_matrices=True)\n",
-    "    s = s[:nb_axes]\n",
-    "    u = U[:, :nb_axes]\n",
-    "    v = V.T[:, :nb_axes]\n",
-    "\n",
-    "    # row mass\n",
-    "    row_mass = row_sum / n\n",
-    "\n",
-    "    # row coord = sv * u /sqrt(row.mass)\n",
-    "    cc = (u * s)\n",
-    "    row_coord = cc / np.sqrt(row_mass)[:, np.newaxis]\n",
-    "\n",
-    "    # col mass\n",
-    "    col_mass = col_sum / n\n",
-    "\n",
-    "    # row coord = sv * v /sqrt(col.mass)\n",
-    "    cc = (v * s)\n",
-    "    col_coord = cc / np.sqrt(col_mass)[:, np.newaxis]\n",
-    "\n",
-    "    # eige nvalue\n",
-    "    eige_nvalue = s ** 2\n",
-    "\n",
-    "    # contribution rate \n",
-    "    contribution_rate = 100 * eige_nvalue / sum(eige_nvalue)\n",
-    "    contribution_rate\n",
+    "    eigenvalues = mca_ben.L\n",
+    "    total = np.sum(eigenvalues)\n",
+    "    explained_inertia = eigenvalues / total\n",
     "\n",
     "    import matplotlib.pyplot as plt\n",
-    "    import numpy as np\n",
+    "    import japanize_matplotlib\n",
+    "    %matplotlib inline\n",
     "\n",
-    "    # Plot of rows\n",
-    "    plt.plot(row_coord[:, 0], row_coord[:, 1], 'o', color='red')\n",
+    "    plt.figure()\n",
+    "\n",
+    "    # Plot of rows (外部変数)\n",
+    "    plt.plot(row_coord[:, 0], row_coord[:, 1], \"*\", color='red', alpha=0.5)\n",
     "    for i, label in enumerate(df.index):\n",
     "        plt.text(row_coord[i, 0], row_coord[i, 1], label, color='red', ha='left', va='bottom')\n",
     "\n",
-    "    # Plot of columns\n",
-    "    plt.plot(col_coord[:, 0], col_coord[:, 1], 'o', color='blue')\n",
+    "    # Plot of columns (単語)\n",
+    "    plt.plot(col_coord[:, 0], col_coord[:, 1], \"o\", color='blue', alpha=0.5)\n",
     "    for i, label in enumerate(df.columns):\n",
     "        plt.text(col_coord[i, 0], col_coord[i, 1], label, color='blue', ha='left', va='bottom')\n",
     "\n",
-    "    plt.axvline(0, linestyle='dashed', color='black')\n",
-    "    plt.axhline(0, linestyle='dashed', color='black')\n",
-    "    plt.xlabel(f\"Dim 1 ({contribution_rate[0]:.3f}%)\")\n",
-    "    plt.ylabel(f\"Dim 2 ({contribution_rate[1]:.3f}%)\")\n",
+    "    plt.axvline(0, linestyle='dashed', color='gray', alpha=0.5)\n",
+    "    plt.axhline(0, linestyle='dashed', color='gray', alpha=0.5)\n",
+    "    plt.xlabel(f\"Dim 1 ({explained_inertia[0]*100:.3f}%)\")\n",
+    "    plt.ylabel(f\"Dim 2 ({explained_inertia[1]*100:.3f}%)\")\n",
+    "    # plt.axis('equal')\n",
     "    plt.show()\n",
     "\n",
     "\n",
@@ -570,7 +542,7 @@
     "tags": []
    },
    "source": [
-    "### 1.6 文書-単語表の作成"
+    "### 1.6 「文書-抽出語」表の作成"
    ]
   },
   {
@@ -859,6 +831,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3e9a848-977a-4384-913a-4caa32cd6555",
+   "metadata": {},
+   "source": [
+    "「文書-抽出語」 表を確認する"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c4d3655d-0de3-4261-a75b-683924eb3958",
@@ -876,7 +856,7 @@
    "id": "df75d709-9858-44fe-8c3e-848096449075",
    "metadata": {},
    "source": [
-    "#### 1.9.1 クロス集計表を作成する"
+    "#### 1.9.1 「外部変数-抽出語」 クロス集計表を作成する"
    ]
   },
   {
@@ -912,7 +892,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_coresp(aggregate_df)"
+    "plot_mca(aggregate_df)"
    ]
   },
   {
@@ -921,6 +901,14 @@
    "metadata": {},
    "source": [
     "### 1.10 トピックモデル"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d8c0604-d440-4ee9-bfd7-503e03491e4d",
+   "metadata": {},
+   "source": [
+    "「文書-抽出語」 表を確認する"
    ]
   },
   {
@@ -1081,7 +1069,7 @@
     "tags": []
    },
    "source": [
-    "#### 2.1.3 文書-単語表の作成 (演習)"
+    "#### 2.1.3 「文書-抽出語」表の作成 (演習)"
    ]
   },
   {
@@ -1230,7 +1218,7 @@
     "tags": []
    },
    "source": [
-    "#### 2.2.3 文書-単語表の作成 (演習)"
+    "#### 2.2.3 「文書-抽出語」表の作成 (演習)"
    ]
   },
   {
