--- a/notebooks/day-4.ipynb
+++ b/notebooks/day-4.ipynb
@@ -632,23 +632,21 @@
     "\n",
     "# Singular value decomposition\n",
     "U, s, V = np.linalg.svd(residuals, full_matrices=True)\n",
-    "s = s[:nb_axes]\n",
+    "sv = s[:nb_axes]\n",
     "u = U[:, :nb_axes]\n",
-    "v = V.T[:, :nb_axes]\n",
+    "v = V[:nb_axes, :]\n",
     "\n",
     "# row mass\n",
     "row_mass = row_sum / n\n",
     "\n",
-    "# row coord = sv * u /sqrt(row.mass)\n",
-    "cc = (u * s)\n",
-    "row_coord = cc / np.sqrt(row_mass)[:, np.newaxis]\n",
+    "# row coord = u * sv /sqrt(row.mass)\n",
+    "row_coord = (u * sv) / np.sqrt(row_mass)[:, np.newaxis]\n",
     "\n",
     "# col mass\n",
     "col_mass = col_sum / n\n",
     "\n",
-    "# row coord = sv * v /sqrt(col.mass)\n",
-    "cc = (v * s)\n",
-    "col_coord = cc / np.sqrt(col_mass)[:, np.newaxis]\n",
+    "# row coord = sv * vT /sqrt(col.mass)\n",
+    "col_coord = (sv * v.T) / np.sqrt(col_mass)[:, np.newaxis]\n",
     "\n",
     "# eige nvalue\n",
     "eige_nvalue = s ** 2\n",
@@ -683,23 +681,21 @@
     "\n",
     "# Singular value decomposition\n",
     "U, s, V = np.linalg.svd(table_P, full_matrices=True)\n",
-    "s = s[:nb_axes]\n",
+    "sv = s[:nb_axes]\n",
     "u = U[:, :nb_axes]\n",
-    "v = V.T[:, :nb_axes]\n",
+    "v = V[:nb_axes, :]\n",
     "\n",
     "# row mass\n",
     "row_mass = row_sum / n\n",
     "\n",
-    "# row coord = sv * u /sqrt(row.mass)\n",
-    "cc = (u * s)\n",
-    "row_coord = cc / np.sqrt(row_mass)[:, np.newaxis]\n",
+    "# row coord = u * sv /sqrt(row.mass)\n",
+    "row_coord = (u * sv) / np.sqrt(row_mass)[:, np.newaxis]\n",
     "\n",
     "# col mass\n",
     "col_mass = col_sum / n\n",
     "\n",
-    "# row coord = sv * v /sqrt(col.mass)\n",
-    "cc = (v * s)\n",
-    "col_coord = cc / np.sqrt(col_mass)[:, np.newaxis]\n",
+    "# row coord = sv * vT /sqrt(col.mass)\n",
+    "col_coord = (sv * v.T) / np.sqrt(col_mass)[:, np.newaxis]\n",
     "\n",
     "# eige nvalue\n",
     "eige_nvalue = s ** 2\n",
